# GAL.Graph_Abstraction_Layer

./: .gitignore  CHANGELOG.md  GAL_NETLIST_SPEC.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  pyproject.toml
.claude/commands/: fallacy-guard.md
.claude/skills/fallacy-guard/: SKILL.md  (+2 more)
.github/workflows/: ci.yml  pages.yml
docs/: GLOSSARY.md  ROADMAP.md  index.html  styles.css
docs/blog/: 2026-07-07-gal-dialect-library.md  2026-07-07-hal-boundary-discipline.md  2026-07-07-mal-memory-graphs.md  README.md  index.html
docs/dialects/: AUDAL.md  DAL.md  GOVAL.md  HAL.md  IAL.md  KAL.md  LAL.md  PAL.md  RAL.md  README.md  SAL.md  TAXONOMY.md  VAL.md  index.html
docs/schemas/: gal.components.v0.schema.json  gal.dialects.v0.schema.json  gal.doctor.v0.schema.json  gal.examples.v0.schema.json  gal.init_report.v0.schema.json  gal.netlist.ast.v0.schema.json  gal.runtime.v0.schema.json  gal.verify_batch.v0.schema.json  gal.verify_report.v0.schema.json  index.html  index.json
examples/dialects/: audal.gal  dal.gal  eal.gal  fal.gal  hal.gal  qal.gal  ral.gal  wal.gal
scripts/: install_claude_fallacy_guard.py  release_check.py
src/gal_netlist/: __init__.py  _version.py  cli.py  components.py  converters.py  dialects.py  examples.py  loader.py  parser.py  renderer.py  schemas.py
tests/: test_claude_skills.py  test_components.py  test_converters.py  test_dialects.py  test_docs.py  test_doctor.py  test_examples_cli.py  test_init_cli.py  test_loader.py  test_release_check.py  test_release_docs.py  test_roundtrip.py  test_schemas.py  test_verify_cli.py  test_version.py
(+30 files in other folders)
