[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gal-netlist"
version = "0.1.0"
description = "GAL:netlist parser and canonical renderer"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "GAL contributors" }]

[project.scripts]
gal = "gal_netlist.cli:main"

[project.optional-dependencies]
dev = ["build>=1.2", "jsonschema>=4.23", "pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gal_netlist = ["data/dialects/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
